Updates for enforcement v2

--- a/app/views/enforcement/v2/appeal-site/site-interest.html
+++ b/app/views/enforcement/v2/appeal-site/site-interest.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "What is your or your client’s interest in the land?" %}
+{% set title = "What is your or your client’s interest in the land or building?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -39,12 +39,12 @@
             </legend>
 
             <p class="govuk-body">
-              To appeal the enforcement notice, you must have an interest in the land or be a relevant occupier of the land.
+              To appeal the enforcement notice, you must have an interest in the land or building, or be a relevant occupier.
             </p>
 
-            <p class="govuk-body">
+            <!-- <p class="govuk-body">
               It does not matter what your status was at the time the enforcement notice was served. You must tell us your status at the time of making this appeal.
-            </p>
+            </p> -->
 
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
