--- a/app/views/enforcement/v2/grounds/grounds.html
+++ b/app/views/enforcement/v2/grounds/grounds.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form method="post">
+      <form action="grounds" method="post">
 
         <span class="govuk-caption-l">
           Choose your grounds of appeal
