Updates to ground reason questions

--- a/app/views/enforcement/v2/grounds/groundA.html
+++ b/app/views/enforcement/v2/grounds/groundA.html
@@ -32,43 +32,32 @@
 
       <div class="govuk-form-group">
 
+        <!-- reasons by file -->
+        <label class="govuk-label govuk-label--l" for="enforcement-ground-a-reasons">
+          {{ title  }}
+        </label>
+
+        <div class="govuk-inset-text">
+          Planning permission should be granted for the alleged breach in the enforcement notice.
+        </div>
+
+        <p class="govuk-hint">
+          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+        <p>
+
         {% if data['enforcement-reason-method'] == 'text' %}
 
-          <!-- reasons by textarea input -->
-          <div class="govuk-form-group">
-            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="enforcement-ground-a-reasons">
-                {{ title }}
-              </label>
-            </h1>
-            <div class="govuk-inset-text">
-              The supposed breach of planning control should be allowed
-            </div>
-            <div id="enforcement-ground-a-reasons-hint" class="govuk-hint">
-              You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
-            </div>
-            <textarea class="govuk-textarea" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" rows="5" aria-describedby="enforcement-ground-a-reasons-hint"></textarea>
-          </div>
+          <textarea class="govuk-textarea" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" rows="5" aria-describedby="enforcement-ground-a-reasons-hint"></textarea>
 
-          <p class="govuk-body">
-            <a href="groundA?enforcement-reason-method=file" class="govuk-link">
-              Upload your reasons in a document
-            </a>
-          </p>
+        </div>
+
+        <p class="govuk-body">
+          <a href="groundA?enforcement-reason-method=file" class="govuk-link">
+            Or upload your reasons in a document
+          </a>
+        </p>
 
         {% else %}
-
-          <!-- reasons by file -->
-          <label class="govuk-label govuk-label--l" for="enforcement-ground-a-reasons">
-            {{ title  }}
-          </label>
-
-          <div class="govuk-inset-text">
-            The supposed breach of planning control should be allowed
-          </div>
-
-          <p class="govuk-hint">
-            You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
-          <p>
 
           <!-- upload files -->
           <label class="govuk-label govuk-label--m" for="enforcement-ground-a-reasons">
@@ -76,7 +65,7 @@
           </label>
           <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" type="file" multiple>
 
-        </div>
+
 
         {{ govukInsetText({
           text: "File size should be no more than 15MB"
@@ -103,55 +92,50 @@
 
         <p class="govuk-body">
           <a href="groundA?enforcement-reason-method=text" class="govuk-link">
-            Explain your reasons using a text box
+            Or explain your reasons using a text box
           </a>
         </p>
 
-      {% endif %}
+        {% endif %}
 
-      <!-- route user based on what they selected -->
-      {% if data['grounds-2'] %}
-        {{ govukButton({
-          href: "groundB",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-3'] %}
-        {{ govukButton({
-          href: "groundC",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-4'] %}
-        {{ govukButton({
-          href: "groundD",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-5'] %}
-        {{ govukButton({
-          href: "groundE",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-6'] %}
-        {{ govukButton({
-          href: "groundF",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-7'] %}
-        {{ govukButton({
-          href: "groundG",
-          text: "Continue"
-        }) }}
-      {% else %}
-        {{ govukButton({
-          href: "application",
-          text: "Continue"
-        }) }}
-      {% endif %}
+        <!-- route user based on what they selected -->
+        {% if data['grounds-2'] %}
+          {{ govukButton({
+            href: "groundB",
+            text: "Continue"
+          }) }}
+        {% elif data['grounds-3'] %}
+          {{ govukButton({
+            href: "groundC",
+            text: "Continue"
+          }) }}
+        {% elif data['grounds-4'] %}
+          {{ govukButton({
+            href: "groundD",
+            text: "Continue"
+          }) }}
+        {% elif data['grounds-5'] %}
+          {{ govukButton({
+            href: "groundE",
+            text: "Continue"
+          }) }}
+        {% elif data['grounds-6'] %}
+          {{ govukButton({
+            href: "groundF",
+            text: "Continue"
+          }) }}
+        {% elif data['grounds-7'] %}
+          {{ govukButton({
+            href: "groundG",
+            text: "Continue"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            href: "application",
+            text: "Continue"
+          }) }}
+        {% endif %}
 
-
-
-    </form>
-
-  </div>
-</div>
-
+      </div>
+    </div>
 {% endblock %}
