--- a/app/views/enforcement/v2/grounds/groundC.html
+++ b/app/views/enforcement/v2/grounds/groundC.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Tell us why the supposed breach of planning control does not need planning permission" %}
+{% set title = "Tell us your reasons for choosing Ground C" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -32,45 +32,38 @@
 
       <div class="govuk-form-group">
 
+        <!-- reasons by file -->
+        <label class="govuk-label govuk-label--l" for="enforcement-ground-c-reasons">
+          {{ title  }}
+        </label>
+
+        <div class="govuk-inset-text">
+          The alleged breach does not require planning permission.
+        </div>
+
+        <p class="govuk-hint">
+          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+        <p>
+
         {% if data['enforcement-reason-method'] == 'text' %}
 
-          <!-- reasons by multitext input -->
-          {{ govukTextarea({
-            name: "enforcement-ground-c-reasons",
-            id: "enforcement-ground-c-reasons",
-            label: {
-              text: title,
-              classes: "govuk-label--l",
-              isPageHeading: true
-            },
-            hint: {
-              text: "You do not need to repeat the local planning department’s reasons for issuing the enforcement notice."
-            }
-          }) }}
+          <textarea class="govuk-textarea" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
 
-          <p class="govuk-body">
-            <a href="groundC?enforcement-reason-method=file" class="govuk-link">
-              Upload your reasons in a document
-            </a>
-          </p>
+        </div>
+
+        <p class="govuk-body">
+          <a href="groundC?enforcement-reason-method=file" class="govuk-link">
+            Or upload your reasons in a document
+          </a>
+        </p>
 
         {% else %}
-
-          <!-- reasons by file -->
-          <label class="govuk-label govuk-label--l" for="enforcement-ground-c-reasons">
-            {{ title  }}
-          </label>
-          <p class="govuk-hint">
-            You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
-          <p>
 
           <!-- upload files -->
           <label class="govuk-label govuk-label--m" for="enforcement-ground-c-reasons">
             Drag and drop or choose files
           </label>
           <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" type="file" multiple>
-
-        </div>
 
         {{ govukInsetText({
           text: "File size should be no more than 15MB"
@@ -97,7 +90,7 @@
 
         <p class="govuk-body">
           <a href="groundC?enforcement-reason-method=text" class="govuk-link">
-            Explain your reasons using a text box
+            Or explain your reasons using a text box
           </a>
         </p>
 
@@ -130,8 +123,6 @@
           text: "Continue"
         }) }}
       {% endif %}
-
-    </form>
 
   </div>
 </div>
