--- a/app/views/enforcement/v2/grounds/groundG.html
+++ b/app/views/enforcement/v2/grounds/groundG.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Tell us why more time is needed to undo the supposed breach of planning control" %}
+{% set title = "Tell us your reasons for choosing Ground G" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -32,37 +32,32 @@
 
       <div class="govuk-form-group">
 
+        <!-- reasons by file -->
+        <label class="govuk-label govuk-label--l" for="enforcement-ground-g-reasons">
+          {{ title  }}
+        </label>
+
+        <div class="govuk-inset-text">
+          I need more time to comply with the enforcement notice.
+        </div>
+
+        <p class="govuk-hint">
+          You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+        <p>
+
         {% if data['enforcement-reason-method'] == 'text' %}
 
-          <!-- reasons by multitext input -->
-          {{ govukTextarea({
-            name: "enforcement-ground-g-reasons",
-            id: "enforcement-ground-g-reasons",
-            label: {
-              text: title,
-              classes: "govuk-label--l",
-              isPageHeading: true
-            },
-            hint: {
-              text: "You do not need to repeat the local planning department’s reasons for issuing the enforcement notice."
-            }
-          }) }}
+          <textarea class="govuk-textarea" id="enforcement-ground-g-reasons" name="enforcement-ground-g-reasons" rows="5" aria-describedby="enforcement-ground-g-reasons-hint"></textarea>
 
-          <p class="govuk-body">
-            <a href="groundG?enforcement-reason-method=file" class="govuk-link">
-              Upload your reasons in a document
-            </a>
-          </p>
+        </div>
+
+        <p class="govuk-body">
+          <a href="groundG?enforcement-reason-method=file" class="govuk-link">
+            Or upload your reasons in a document
+          </a>
+        </p>
 
         {% else %}
-
-          <!-- reasons by file -->
-          <label class="govuk-label govuk-label--l" for="enforcement-ground-g-reasons">
-            {{ title  }}
-          </label>
-          <p class="govuk-hint">
-            You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
-          <p>
 
           <!-- upload files -->
           <label class="govuk-label govuk-label--m" for="enforcement-ground-g-reasons">
@@ -70,7 +65,7 @@
           </label>
           <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-g-reasons" name="enforcement-ground-g-reasons" type="file" multiple>
 
-        </div>
+
 
         {{ govukInsetText({
           text: "File size should be no more than 15MB"
@@ -97,21 +92,18 @@
 
         <p class="govuk-body">
           <a href="groundG?enforcement-reason-method=text" class="govuk-link">
-            Explain your reasons using a text box
+            Or explain your reasons using a text box
           </a>
         </p>
 
-      {% endif %}
+        {% endif %}
 
-      <!-- route user based on what they selected -->
-      {{ govukButton({
-        href: "application",
-        text: "Continue"
-      }) }}
+        <!-- go to application question -->
+        {{ govukButton({
+          href: "application",
+          text: "Continue"
+        }) }}
 
-    </form>
-
-  </div>
-</div>
-
+      </div>
+    </div>
 {% endblock %}
