Swapping plans and enf notice, fees content tweak

--- a/app/views/enforcement/v2/grounds/fees-exempt.html
+++ b/app/views/enforcement/v2/grounds/fees-exempt.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Do you have a reason why you have not paid for planning permission?" %}
+{% set title = "Do you have a reason why you have not paid?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
