--- a/app/views/enforcement/v2/grounds/fees.html
+++ b/app/views/enforcement/v2/grounds/fees.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Have you paid the planning permission fee to your local planning department?" %}
+{% set title = "Have you paid the planning application fee to your local planning department?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
