Enforcement upload document changes

--- a/app/views/enforcement/v2/before-you-continue.html
+++ b/app/views/enforcement/v2/before-you-continue.html
@@ -42,10 +42,10 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          the plans, drawings and supporting documents for your appeal
+          your enforcement notice
         </li>
         <li>
-          your enforcement notice
+          any other documents to support your appeal
         </li>
       </ul>
 
