--- a/app/views/enforcement/v2/upload/enforcement-notice.html
+++ b/app/views/enforcement/v2/upload/enforcement-notice.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Enforcement notice" %}
+{% set title = "Enforcement notice and additional plans" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -35,9 +35,13 @@
         {{ title }}
       </h1>
 
+      <div id="enforcement-uploaded-notice-hint" class="govuk-hint">
+        Plans are sometimes included in the notice. You must include these.
+      </div>
+
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="enforcement-uploaded-notice">
-          Drag and drop or choose a file
+          Drag and drop or choose files
         </label>
         <input class="govuk-file-upload pins-file-upload" id="enforcement-uploaded-notice" name="enforcement-uploaded-notice" type="file" multiple>
       </div>
