Pulling conditionally revealed form-sets (date entry) out of radio button forms

--- a/app/views/before-you-start/v11/appeal-intent.html
+++ b/app/views/before-you-start/v11/appeal-intent.html
@@ -33,42 +33,9 @@
         Before you start
       </span>
 
-      {% set intentDate %}
-
-        {{ govukDateInput({
-          id: "enforcement-intent-date",
-          namePrefix: "enforcement-intent-date",
-          fieldset: {
-            legend: {
-              text: "When did you submit your intent to appeal?",
-              isPageHeading: false,
-              classes: "govuk-fieldset__legend--m"
-            }
-          },
-          items: [
-            {
-              name: "day",
-              classes: "govuk-input--width-2",
-              value: data["enforcement-intent-date-day"]
-            },
-            {
-              name: "month",
-              classes: "govuk-input--width-2",
-              value: data["enforcement-intent-date-month"]
-            },
-            {
-              name: "year",
-              classes: "govuk-input--width-4",
-              value: data["enforcement-intent-date-year"]
-            }
-          ]
-        }) }}
-
-      {% endset -%}
-
       {{ govukRadios({
-        idPrefix: "bys-"+version+"-intent",
-        name: "intent",
+        idPrefix: "enforcement-intent",
+        name: "enforcement-intent",
         fieldset: {
           legend: {
             text: title,
@@ -79,10 +46,7 @@
         items: [
           {
             value: "intent",
-            text: "Yes, I did submit an intent to appeal",
-            conditional: {
-              html: intentDate
-            }
+            text: "Yes, I did submit an intent to appeal"
           },
           {
             value: "nointent",
