--- a/app/views/enforcement/v2/grounds/application-date.html
+++ b/app/views/enforcement/v2/grounds/application-date.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Did you submit a planning application to the local planning department?" %}
+{% set title = "When did you submit your planning application?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -27,15 +27,15 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/applicationmade" method="post">
+    <form action="application-decision" method="post">
 
       <span class="govuk-caption-l">
         Choose your grounds of appeal
       </span>
 
-      {{ govukRadios({
-        idPrefix: "enforcement-application",
-        name: "enforcement-application",
+      {{ govukDateInput({
+        id: "enforcement-retroapplication-date",
+        namePrefix: "enforcement-retroapplication-date",
         fieldset: {
           legend: {
             text: title,
@@ -43,19 +43,21 @@
             classes: "govuk-fieldset__legend--l"
           }
         },
-        hint: {
-          text: "The planning application must have been for the same breach of planning control as written in the enforcement notice."
-        },
         items: [
           {
-            value: "Yes",
-            text: "Yes, I submitted a planning application to the local planning department",
-            checked: checked("enforcement-application", "Yes")
+            name: "day",
+            classes: "govuk-input--width-2",
+            value: data["enforcement-retroapplication-date-day"]
           },
           {
-            value: "No",
-            text: "No, I did not submit a planning application to the local planning department",
-            checked: checked("enforcement-application", "No")
+            name: "month",
+            classes: "govuk-input--width-2",
+            value: data["enforcement-retroapplication-date-month"]
+          },
+          {
+            name: "year",
+            classes: "govuk-input--width-4",
+            value: data["enforcement-retroapplication-date-year"]
           }
         ]
       }) }}
