Fix to fees question

--- a/app/views/enforcement/v2/grounds/fees.html
+++ b/app/views/enforcement/v2/grounds/fees.html
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form method="post">
+    <form action="/feespaid" method="post">
 
       <div class="govuk-form-group">
 
